# swift_portal_downloader

./: .gitignore  README.md  comet_names.yaml  config.yaml  file.csv  portal_search.yaml  portal_search_results.csv  pyproject.toml
src/massdownlader/: main.py  swift_dead_portal_search.py
src/massdownloader/: __init__.py  main.py  swift_comet_rename.py  swift_dead_portal_downloader.py  swift_dead_portal_search.py  swift_utils.py
src/swift_portal_downloader/: HELP.md  INFO.md  __init__.py  comet_names.yaml  main.py  spd.py  swift_comet_rename.py  swift_dead_portal_downloader.py  swift_dead_portal_search.py  swift_utils.py
src/swift_portal_downloader/comet_db/: comet_db.py  comet_db_search.py  download_comet_db.py
src/swift_portal_downloader/config/: spd_config.py
src/swift_portal_downloader/naming/: canonical_comet_name.py  manual_renaming.py  manual_renaming_scheme.py  name_conversion.py
src/swift_portal_downloader/portal/download/: download_comet_db_entry.py  observation_id_to_wget_command.py  target_id_to_observation_id.py  uncompressed_download.py  wget_command.py
src/swift_portal_downloader/portal/search/: all_comet_search.py  search_by_name.py
src/swift_portal_downloader/swift/: swift_downloadable_data_types.py  swift_observation_id.py  swift_target_id.py  swift_target_name.py
src/swift_portal_downloader/tui/: create_config_tui.py  download_comet_db_tui.py  download_comet_tui.py  rich_display.py  search_comet_db_tui.py  show_info_tui.py  spd_tui.py  tui_info.md
