[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "massdownloader"
version = "0.0.1"
authors = [ "Jacob Duffy" ]
description = "Data reduction pipeline for determining water production rates from the Swift telescope's UVOT images"
classifiers = ["Programming Language :: Python :: 3",]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.4"
rich = "^13.7.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
md_tui = "massdownloader.main:main" 

[tool.poetry.dev-dependencies]
